I have included the .filter() to select the current element. It works, this can be used to complete the other requirements.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -34,9 +34,7 @@ and open the template in the editor.
                 <li>
                     <ul><li>Regis</li></ul> 
                 </li>
-                <li>
-                    Anne
-                </li>
+                
             </ul>
             
             <ul>
@@ -60,8 +58,8 @@ and open the template in the editor.
         <div class="container">
             <button id="moveDownDom" type="button"  class="btn btn-default" >Move down DOM</button>
             <button id="moveUpDom" type="button" class="btn btn-primary">Move up DOM</button>
-            <button type="button" class="btn btn-success">Success</button>
-            <button type="button" class="btn btn-info">Info</button>
+            <button id="addNewChild" type="button" class="btn btn-success">Add new child </button>
+            <button id="changeText" type="button" class="btn btn-info">changeText</button>
             <button type="button" class="btn btn-warning">Warning</button>
             <button type="button" class="btn btn-danger">Danger</button>
         </div>
