Added more functionality.Added Remove Child,Change Text,Add new child, Add sibling. The Add sibling is only partially working.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -59,9 +59,9 @@ and open the template in the editor.
             <button id="moveDownDom" type="button"  class="btn btn-default" >Move down DOM</button>
             <button id="moveUpDom" type="button" class="btn btn-primary">Move up DOM</button>
             <button id="addNewChild" type="button" class="btn btn-success">Add new child </button>
-            <button id="changeText" type="button" class="btn btn-info">changeText</button>
-            <button type="button" class="btn btn-warning">Warning</button>
-            <button type="button" class="btn btn-danger">Danger</button>
+            <button id="changeText" type="button" class="btn btn-info">ChangeText</button>
+            <button id="removeChild" type="button" class="btn btn-warning">Remove child</button>
+            <button id="addSibling" type="button" class="btn btn-danger">Add sibling</button>
         </div>
 
     </body>
