--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,7 +13,7 @@ and open the template in the editor.
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-
+<!--Uploading this vewrsion before formatting C  drive -->
         <!--script src="JS/nodeHighlighter.js" type="text/javascript"></script-->
         <link href="CSS/highLight.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
