--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,7 +12,8 @@ and open the template in the editor.
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
+        <script src="JS/jquery-3.1.1.js" type="text/javascript"></script>
+        
 <!--Uploading this vewrsion before formatting C  drive -->
         <!--script src="JS/nodeHighlighter.js" type="text/javascript"></script-->
         <link href="CSS/highLight.css" rel="stylesheet" type="text/css"/>
