--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,22 +7,20 @@ and open the template in the editor.
 
 <html>
     <head>
-        <title>Assignment 1 Thin Client DOM</title>
+        <title id="title">Assignment 1 Thin Client DOM</title>
         <meta charset="UTF-8">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="JS/jquery-3.1.1.js" type="text/javascript"></script>
-        
-<!--Uploading this vewrsion before formatting C  drive -->
-        <!--script src="JS/nodeHighlighter.js" type="text/javascript"></script-->
         <link href="CSS/highLight.css" rel="stylesheet" type="text/css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="JS/functions.js" type="text/javascript"></script>
     </head>
     <body>
 
-
+<div id="tree">
+    <div id="familyNames">
         <div class="container">
             <ul class="listitem" >
                 <li>
@@ -56,7 +54,9 @@ and open the template in the editor.
                 
 
         </div>
-        <div class="container">
+    </div>
+    <div id="btnGroup">
+            <div class="btn-group-vertical">
             <button id="moveDownDom" type="button"  class="btn btn-default" >Move down DOM</button>
             <button id="moveUpDom" type="button" class="btn btn-primary">Move up DOM</button>
             <button id="addNewChild" type="button" class="btn btn-success">Add new child </button>
@@ -64,5 +64,6 @@ and open the template in the editor.
             <button id="removeChild" type="button" class="btn btn-warning">Remove child</button>
             <button id="addSibling" type="button" class="btn btn-danger">Add sibling</button>
         </div>
-
+    </div>
+</div>
     </body>
