--- a/public_html/index6.html
+++ b/public_html/index6.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Bootstrap Example</title>
+        <title>Assignment 1 Thin Client DOM</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <link href="CSS/highLight.css" rel="stylesheet" type="text/css"/>
         <script src="JS/functions.js" type="text/javascript"></script>
+        <link href="CSS/highLight.css" rel="stylesheet" type="text/css"/>
 
 
         <style>
