further work done on changeText2. Its still not  assigning the new  value to the DOM.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,9 +21,9 @@
                         <button id="moveDownDom" type="button"  class="btn btn-default" >Move down DOM</button>
                         <button id="moveUpDom" type="button" class="btn btn-primary">Move up DOM</button>
                         <button id="addNewChild" type="button" class="btn btn-success">Add new child </button>
-                        <button type="button" class="btn btn-info btn-default" data-toggle="modal" data-target="#changeText">Add new child</button>
+                        <button type="button" class="btn btn-info btn-default" data-toggle="modal" data-target="#changeText">Modal_Add new child</button>
                         <button id="changeText" type="button" class="btn btn-info">ChangeText</button>
-                        <button type="button" class="btn btn-info btn-default" data-toggle="modal" data-target="#myOtherModal">ChangeText</button>
+                        <button type="button" class="btn btn-info btn-default" data-toggle="modal" data-target="#myOtherModal">Modal_ChangeText</button>
 
                         <button id="removeChild" type="button" class="btn btn-warning">Remove child</button>
                         <button id="addSibling" type="button" class="btn btn-danger">Add sibling</button>
@@ -41,7 +41,7 @@
                                         <img src="Images/WilmaFlinstone.jpg" alt="" height="60" width="60"/>
                                     </div>
                                     <div class="modal-footer">
-                                        <button id="btnClose" type="button" class="btn btn-default" data-dismiss="modal">Close, if you are done</button>
+                                        <button id="btnClose" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                     </div>
                                 </div>
 
@@ -59,7 +59,7 @@
                                     <div class="modal-body">
                                         <p>What is the new text</p>
                                         <img src="Images/FredFlinstone.png" alt=""height="70" width="70"/>
-                                        <input type="text" class="form-control" id="newname" placeholder="Enter  new name">
+                                        <input id="newname" type="text" class="form-control"  placeholder="Enter  new name">
                                     </div>
                                     <div class="modal-footer">
                                         <button id="btnClose2" type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
