Added a function to  print out DOM  tree parents in an alert box.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -27,6 +27,8 @@
 
                         <button id="removeChild" type="button" class="btn btn-warning">Remove child</button>
                         <button id="addSibling" type="button" class="btn btn-danger">Add sibling</button>
+                        <button id="showSubDomTree" type="button" class="btn btn-default">Show parents</button>
+
                         <div class="modal fade" id="changeText" role="dialog">
                             <div class="modal-dialog">
 
