The Modal ChangeText function is now working.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,7 +22,7 @@
                         <button id="moveUpDom" type="button" class="btn btn-primary">Move up DOM</button>
                         <button id="addNewChild" type="button" class="btn btn-success">Add new child </button>
                         <button type="button" class="btn btn-info btn-default" data-toggle="modal" data-target="#changeText">Modal_Add new child</button>
-                        <button id="changeText" type="button" class="btn btn-info">ChangeText</button>
+                        <!--button id="changeText" type="button" class="btn btn-info">ChangeText</button-->
                         <button type="button" class="btn btn-info btn-default" data-toggle="modal" data-target="#myOtherModal">Modal_ChangeText</button>
 
                         <button id="removeChild" type="button" class="btn btn-warning">Remove child</button>
