Added images to DOM

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,104 +31,125 @@
                         <button id="removeChild" type="button" class="btn btn-warning">Remove child</button>
                         <button id="addSibling" type="button" class="btn btn-danger">Add sibling</button>
                         <button id="showSubDomTree" type="button" class="btn btn-default">Show parents</button>
-                    </div>
-                        <!--This is the addChild Modal dialogue box -->
-                        <div class="modal fade" id="addChildModal" role="dialog">
-                            <div class="modal-dialog">
+                        <button id="changeImage" type="button" class="btn btn-default">Change image </button>
 
-                                <!-- Modal content--><!-- Change Text button -->
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                        <h4 class="modal-title">What is the new childs name ?</h4>
-                                    </div>
-                                    <div class="modal-body">
-                                        <p>What is the new text</p>
-                                        <!--img src="Images/FredFlinstone.png" alt=""height="70" width="70"/-->
-                                        <input id="addChildsName" type="text" class="form-control"  placeholder="Enter  childs name">
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button id="btnClose3" type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
-                                    </div>
+                    </div>
+                    <!--This is the addChild Modal dialogue box -->
+                    <div class="modal fade" id="addChildModal" role="dialog">
+                        <div class="modal-dialog">
+
+                            <!-- Modal content--><!-- Change Text button -->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">What is the new childs name ?</h4>
                                 </div>
-
+                                <div class="modal-body">
+                                    <p>What is the new text</p>
+                                    <!--img src="Images/FredFlinstone.png" alt=""height="70" width="70"/-->
+                                    <input id="addChildsName" type="text" class="form-control"  placeholder="Enter  childs name">
+                                </div>
+                                <div class="modal-footer">
+                                    <button id="btnClose3" type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
+                                </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
-                <div class="modal fade" id="myOtherModal" role="dialog">
-                    <div class="modal-dialog">
-
-                        <!-- Modal content--><!-- Change Text button -->
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">Text information request</h4>
-                            </div>
-                            <div class="modal-body">
-                                <p>What is the new text</p>
-                                <img src="Images/FredFlinstone.png" alt=""height="70" width="70"/>
-                                <input id="newname" type="text" class="form-control"  placeholder="Enter  new name">
-                            </div>
-                            <div class="modal-footer">
-                                <button id="btnClose2" type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
             </div>
+            <div class="modal fade" id="myOtherModal" role="dialog">
+                <div class="modal-dialog">
 
-<div id="col2" class="col-sm-8" style="background-color:lavenderblush;">
+                    <!-- Modal content--><!-- Change Text button -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Text information request</h4>
+                        </div>
+                        <div class="modal-body">
+                            <p>What is the new text</p>
+                            <img src="Images/FredFlinstone.png" alt=""height="70" width="70"/>
+                            <input id="newname" type="text" class="form-control"  placeholder="Enter  new name">
+                        </div>
+                        <div class="modal-footer">
+                            <button id="btnClose2" type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
+                        </div>
+                    </div>
 
-
-        <div id="familyNames">
-            <div class="container">
-                <ul class="listitem" >
-                    <li>
-                        Thomas
-                    </li>
-                    <li>
-                        Harold
-                    </li>
-
-                    <li>
-                        <ul><li>Igor</li></ul> 
-                    </li>
-
-                </ul>
-
-                <ul>
-                    <li>Norman</li>
-                    <li>Chantell</li>
-                </ul>   
-                <ul>
-                    <li>
-                        Leyone
-                    </li>
-                    <li>
-                        Ivan
-                    </li>
-                    <li>
-                        Edward
-                    </li>
-                    <li>
-                        Neville
-                    </li>
-                    <li>
-                        Tadg
-                    </li>
-                </ul>
-
-
+                </div>
             </div>
 
         </div>
-    </div>
+
+        <div id="col2" class="col-sm-8" style="background-color:lavenderblush;">
+
+
+            <div id="familyNames">
+                <div class="container">
+                    <ul class="listitem" >
+                        <li>
+                            <img src="Images/FredFlinstone.png" alt="" width="30" height="30"/>
+                            Thomas
+                        </li>
+                        <li>
+                            <img src="Images/Penguins.jpg" alt="" width="30" height="30"/>
+                            Harold
+                        </li>
+
+                        <li>
+                            <ul><li>
+                                    <img src="Images/WilmaFlinstone.jpg" alt="" width="30" height="30"/>
+                                    Igor</li></ul> 
+                        </li>
+
+                    </ul>
+
+                    <ul>
+                        <li>
+                            <img src="Images/FredFlinstone.png" alt="" width="30" height="30"/>
+
+                            Norman</li>
+                        <li>
+                            <img src="Images/Penguins.jpg" alt="" width="30" height="30"/>
+
+
+                            Chantell</li>
+                    </ul>   
+                    <ul>
+                        <li>
+                            <img src="Images/FredFlinstone.png" alt="" width="30" height="30"/>
+
+                            Leyone
+                        </li>
+                        <li>
+                            <img src="Images/Penguins.jpg" alt="" width="30" height="30"/>
+
+                            Ivan
+                        </li>
+                        <li>
+                            <img src="Images/FredFlinstone.png" alt="" width="30" height="30"/>
+
+                            Edward
+                        </li>
+                        <li>
+                            <img src="Images/WilmaFlinstone.jpg" alt="" width="30" height="30"/>
+
+                            Neville
+                        </li>
+                        <li>
+                            Tadg
+                        </li>
+                    </ul>
+
+
+                </div>
+
+            </div>
+        </div>
 
 
 
 
-</body>
+    </body>
 </html>
