--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,12 +10,14 @@
         <link href="CSS/highLight.css" rel="stylesheet" type="text/css"/>
         <link href="CSS/col2.css" rel="stylesheet" type="text/css"/>
         <script src="JS/functions.js" type="text/javascript"></script>
-
+        <link href="CSS/border.css" rel="stylesheet" type="text/css"/>
+        <script src="JS/ImageSlider.js" type="text/javascript"></script>
+        <link href="CSS/title.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
 
         <div class="container-fluid">
-            <h1>Thin Client Assingement 1 DOM </h1>
+            <h1 id="title" class="title">Thin Client Assingement 1 DOM </h1>
             <div class="row">
                 <div id="col1" class="col-sm-4" style="background-color:lavender;">
 
@@ -24,9 +26,9 @@
                         <button id="moveDownDom" type="button"  class="btn btn-default" >Move down DOM</button>
                         <button id="moveUpDom" type="button" class="btn btn-primary">Move up DOM</button>
                         <!--button id="addNewChild" type="button" class="btn btn-success">Add new child </button-->
-                        <button type="button" class="btn btn-info btn-success" data-toggle="modal" data-target="#addChildModal">Modal_Add new child</button>
+                        <button type="button" class="btn btn-info btn-success" data-toggle="modal" data-target="#addChildModal">Add new child</button>
                         <!--button id="changeText" type="button" class="btn btn-info">ChangeText</button-->
-                        <button type="button" class="btn btn-info btn-default" data-toggle="modal" data-target="#myOtherModal">Modal_ChangeText</button>
+                        <button type="button" class="btn btn-info btn-default" data-toggle="modal" data-target="#myOtherModal">ChangeText</button>
 
                         <button id="removeChild" type="button" class="btn btn-warning">Remove child</button>
                         <button id="addSibling" type="button" class="btn btn-danger">Add sibling</button>
@@ -35,6 +37,7 @@
 
                     </div>
                     <!--This is the addChild Modal dialogue box -->
+
                     <div class="modal fade" id="addChildModal" role="dialog">
                         <div class="modal-dialog">
 
@@ -89,17 +92,17 @@
                 <div class="container">
                     <ul class="listitem" >
                         <li>
-                            <img src="Images/FredFlinstone.png" alt="" width="30" height="30"/>
+                            <img class="image" src="Images/FredFlinstone.png" alt="" width="30" height="30"/>
                             Thomas
                         </li>
                         <li>
-                            <img src="Images/Penguins.jpg" alt="" width="30" height="30"/>
+                            <img  class="image" src="Images/Penguins.jpg" alt="" width="30" height="30"/>
                             Harold
                         </li>
 
                         <li>
                             <ul><li>
-                                    <img src="Images/WilmaFlinstone.jpg" alt="" width="30" height="30"/>
+                                    <img  class="image" src="Images/WilmaFlinstone.jpg" alt="" width="30" height="30"/>
                                     Igor</li></ul> 
                         </li>
 
@@ -107,33 +110,33 @@
 
                     <ul>
                         <li>
-                            <img src="Images/FredFlinstone.png" alt="" width="30" height="30"/>
+                            <img  class="image" src="Images/FredFlinstone.png" alt="" width="30" height="30"/>
 
                             Norman</li>
                         <li>
-                            <img src="Images/Penguins.jpg" alt="" width="30" height="30"/>
+                            <img  class="image" src="Images/Penguins.jpg" alt="" width="30" height="30"/>
 
 
                             Chantell</li>
                     </ul>   
                     <ul>
                         <li>
-                            <img src="Images/FredFlinstone.png" alt="" width="30" height="30"/>
+                            <img class="image" src="Images/FredFlinstone.png" alt="" width="30" height="30"/>
 
                             Leyone
                         </li>
                         <li>
-                            <img src="Images/Penguins.jpg" alt="" width="30" height="30"/>
+                            <img  class="image" src="Images/Penguins.jpg" alt="" width="30" height="30"/>
 
                             Ivan
                         </li>
                         <li>
-                            <img src="Images/FredFlinstone.png" alt="" width="30" height="30"/>
+                            <img  class="image" src="Images/FredFlinstone.png" alt="" width="30" height="30"/>
 
                             Edward
                         </li>
                         <li>
-                            <img src="Images/WilmaFlinstone.jpg" alt="" width="30" height="30"/>
+                            <img class="image" src="Images/WilmaFlinstone.jpg" alt="" width="30" height="30"/>
 
                             Neville
                         </li>
@@ -149,7 +152,20 @@
         </div>
 
 
+        <div class="w3-content w3-section" style="max-width:500px">
+            <img id="fred" class="mySlides" src="Images/FredFlinstone.png" alt="" width="100" height="100" >
+            <img id="penguins" class="mySlides" src="Images/Penguins.jpg" alt="" width="100" height="100" >
+            <img id="wilma" class="mySlides" src="Images/WilmaFlinstone.jpg" alt="" width="100" height="100" >
+            <img id="morepenguins" class="mySlides" src="Images/Penguins.jpg " alt="" width="100" height="100" >
 
+        </div>
+        <!--div ><script>
+            var myIndex = 0;
+            imageSlider();
+            </script></div-->
+        <script>
+            
+        </script>
 
     </body>
 </html>
